                                                         -*- coding: utf-8 -*-
Changes with Apache 2.0.60

  *) SECURITY: CVE-2006-5752 (cve.mitre.org)
     mod_status: Fix a possible XSS attack against a site with a public
     server-status page and ExtendedStatus enabled, for browsers which
     perform charset "detection".  Reported by Stefan Esser.  [Joe Orton]

  *) mod_ssl: initialize thread locks before initializing the hardware
     acceleration library, so the latter can make use of the former. 
     PR 20951. [<adunn ncipher.com>]

  *) mod_ssl: Support limited buffering of request bodies to allow 
     per-location renegotiation to proceed.  PR 12355.  [Joe Orton]

  *) mod_cgi, mod_cgid: Don't return apr_status_t error value
     from input filter chain. PR 31759 (mutated). [Jo Rhett,
     Nick Kew]

  *) htdbm: Fix crash processing -d option in 64-bit mode on HP-UX.
     [Jeff Trawick]

  *) proxy_http.c: Overlay existing cookies with proxied ones, ala
     httpd-2.2. [Jim Jagielski]

  *) mod_proxy: ProxyTimeout (and others) ignored due to not merging
     the *_set params. PR 11540. [Jim Jagielski]

  *) mod_isapi: Correctly present SERVER_PORT_SECURE.
     PR 40573.  [Matt Eaton <asf divinehawk.com>]

  *) mod_isapi: Avoid double trailing slashes in HSE_REQ_MAP_URL_TO_PATH
     support.  Also corrects the slashes for Windows.  PR 15993. [William Rowe]

  *) mod_isapi: Handle "HTTP/1.1 200 OK" style status lines correctly, the
     token parser worked while the resulting length was misinterpreted.
     PR 29098.  [Brock Bland <bbland serena.com>]

  *) mod_isapi: Return 0 (failure) for more of the various ap_pass_brigade
     attempts to stream the response at the client.  Log these as well.
     PR 30022, 40470.  [William Rowe, Matt Eaton <asf divinehawk.com>]

  *) mod_isapi: Ensure we walk through all the methods the developer may have
     employed to report their HTTP status result code.